Added mass balances

--- a/process_design_project_notes.org
+++ b/process_design_project_notes.org
@@ -12,7 +12,7 @@
 
 Με βάση τις πληροφορίες αυτές, έγιναν κάποιοι κινητικοί υπολογισμοί του αντιδραστήρα (c-glycerinogenes-rate-expression.org) και υπολογισμοί του οικονομικού δυναμικού της διεργασίας με βάση τις παραγωγικότητες (glycerol-economic-potential.org). Τελευταίο ζήτημα που εξετάστηκε ήταν ο διαχωρισμός των προιόντων της ζύμωσης για την ανάκτηση καθαρής γλυκερόλης [[id:be178380-e830-494e-88e6-aa27671ac782][Ανάκτηση Γλυκερόλης από Προιόντα Ζύμωσης]] . Αρκετά χρήσιμες ήταν οι πληροφορίες των cite:wallersteinMethodRecoveringGlycerol1946 αλλά επειδή το αρχείο αυτό είναι πιό γενικό, προσαρμόσαμε τις πληροφορίες του στα δεδομένα μας.
 
-Επίσης, στο τέλος του αρχείου αυτού παρατίθεται και μία φωτογραφία ενός πρώτου πρόχειρου διαγράμματος ροής της διεργασίας.
+Επίσης, στο τέλος του αρχείου αυτού παρατίθεται και μία φωτογραφία ενός πρώτου πρόχειρου διαγράμματος ροής της διεργασίας και κάποιον υπολογισμών σε ισοζύγια μάζας της διεργασίας.
 
 ** Πίνακας Περιεχομένων                                                 :TOC:
 - [[#outline][Outline]]
@@ -40,6 +40,10 @@
 - [[#method-of-recovering-glycerol-from-fermented-liquors][Method of recovering glycerol from fermented liquors]]
   - [[#analysis-of-patent-by-wallerstein-j-s-eduard-f--victor-d][Analysis of patent by Wallerstein, J. S., Eduard, F., & Victor, D.]]
 - [[#διάγραμμα-ροής][Διάγραμμα Ροής]]
+- [[#ισοζύγια-μάζας][Ισοζύγια Μάζας]]
+- [[#ισοζύγια-μάζας-στην-τροφοδοσία][Ισοζύγια μάζας στην τροφοδοσία]]
+- [[#προκατεργασία-βιομάζας-με-steam-explosion---yields-των-συστατικών][Προκατεργασία βιομάζας με steam explosion - Yields των συστατικών]]
+- [[#ισοζύγιο-μάζας-βιοαντιδραστήρα][Ισοζύγιο μάζας βιοαντιδραστήρα]]
 - [[#βιβλιογραφία][Βιβλιογραφία]]
 
 * Παραγωγή Γλυκερόλης από Βιομάζα
@@ -462,7 +466,7 @@ This table lists the elemental analysis of CSL's ash which contains traces of va
 
 Αν θέλουμε να δούμε την κινητική παραγωγής της γλυκερόλης, αυτή θα είναι \[ r_G = \frac{dG}{dt} = k C_S^n \]. Εφόσον βρήκαμε το r_G και το C_S δίνεται από τα πειραματικά δεδομένα, μπορούμε να κάνουμε fit στην γραμμική σχέση \[ \ln r_G = \ln k + n \ln C_S\] για να βρούμε την τεχνική κινητική παραγωγής του επιθυμητού προιόντος. Προκύπτει πως η τάξη της αντίδρασης είναι 0.335 ως προς το υπόστρωμα και η ειδική ταχύτητα είναι 0.257. Άρα \( r_G = 0.257 [S]^{0.335} \).
 
-Με βάση τα δεδομένα αυτά, μπορούμε να κάνουμε μία εκτίμηση του όγκου του αντιδραστήρα που απαιτείται και της ετήσιας παραγωγής γλυκερόλης. Εφόσον είναι γνωστός ο χρόνος παραμονής και η συγκέντρωση γλυκόζης που εισέρχεται στον αντιδραστήρα μπορεί να υπολογιστεί η κατανάλωση της γλυκόζης ανηγμένη ως προς τον όγκο του αντιδραστήρα [\( \frac{g}{l \cdot year} \)]. Εφόσον είναι γνωστό και το ρεύμα τροφοδοσίας μπορεί να υπολογιστεί πόση μάζα γλυκόζης πρέπει να διαχειριστούμε τον χρόνο. Ο λόγος αυτών των δύο, μας δίνει το απαραίτητο working volume ώστε να επεξεργαστούμε όλη την βιομάζα που έχει η τροφοδοσία χρησιμοποιώντας σε κάθε batch την βέλτιστη συγκέντρωση υποστρώματος. Αυτός προκύπτει ίσος με 2985.9 m^3. Ο συνολικός αντιδρών όγκος άρα πρέπει να είναι στο ελάχιστο 2985.9 m^3, διαμερισμένο μάλλον σε αρκετούς αντιδραστήρες.
+Με βάση τα δεδομένα αυτά, μπορούμε να κάνουμε μία εκτίμηση του όγκου του αντιδραστήρα που απαιτείται και της ετήσιας παραγωγής γλυκερόλης. Εφόσον είναι γνωστός ο χρόνος παραμονής και η συγκέντρωση γλυκόζης που εισέρχεται στον αντιδραστήρα μπορεί να υπολογιστεί η κατανάλωση της γλυκόζης ανηγμένη ως προς τον όγκο του αντιδραστήρα [\( \frac{g}{l \cdot year} \)]. Εφόσον είναι γνωστό και το ρεύμα τροφοδοσίας μπορεί να υπολογιστεί πόση μάζα γλυκόζης πρέπει να διαχειριστούμε τον χρόνο. Ο λόγος αυτών των δύο, μας δίνει το απαραίτητο working volume ώστε να επεξεργαστούμε όλη την βιομάζα που έχει η τροφοδοσία χρησιμοποιώντας σε κάθε batch την βέλτιστη συγκέντρωση υποστρώματος. Αυτός προκύπτει ίσος με 1301.5 m^3. Ο συνολικός αντιδρών όγκος άρα πρέπει να είναι στο ελάχιστο 1301.5 m^3, διαμερισμένο μάλλον σε αρκετούς αντιδραστήρες.
 
 Σε ξεχωριστό αρχείο παρουσιάζονται και τα οικονομικά στοιχεία της διεργασίας
 
@@ -474,13 +478,13 @@ This table lists the elemental analysis of CSL's ash which contains traces of va
 
 Αξίζει να σημειωθεί πως 4 g CSL αντιστοιχούν σε 35.71 mg P, ενώ σύμφωνα με τις βέλτιστες συνθήκες που προσδιόρισαν οι [[cite:&zhugeGlycerolProductionNovel2001]] θέλουμε 55-65 mg P/l. Η πειραματική διαδικασία προέκυψε από την μελέτη [[cite:&jinByproductFormationNovel2003]] και όχι την μελέτη των βέλτιστων συνθηκών επειδή στο άρθρο αυτό αναφερόταν και η συγκέντρωση της βιομάζας η οποία είναι απαραίτητη για μία σωστή κινητική μελέτη.
 
-Για αντιδραστήρα 2985.9 m^3, θέλουμε 75000 τόνους γλυκόζη, 650.93 τόνους ουρία και 1301.9 τόνους Corn steep liquor. Η παραγωγικότητα είναι 31298 τόνοι γλυκερόλη. Τα παραπροιόντα είναι 1469.8 τόνοι αραβιτόλη, 387.30 τόνοι αιθανόλη και 380.79 τόνοι οξικό οξύ το χρόνο. Παρότι τα παραπροιόντα αυτά είναι σε μικρές συγκεντρώσεις, μέσα στα 109 batches που γίνονται το χρόνο και στο working volume των 2985.9 m^3 που χρησιμοποιούμε, οι συνολικές ποσότητες είναι σημαντικές. Άρα, αξίζει να μελετηθεί τι θα γίνουν τα παραπροιόντα αυτά.
+Για αντιδραστήρα 1301.5 m^3, ο οποίος απαιτείται για την επεξεργασία 32692.2 τόνους γλυκόζη, θέλουμε 283.74 τόνους ουρία και 567.47 τόνους Corn steep liquor. Η παραγωγικότητα είναι 13643 τόνοι γλυκερόλη. Τα παραπροιόντα είναι 640.68 τόνοι αραβιτόλη, 168.82 τόνοι αιθανόλη και 165.99 τόνοι οξικό οξύ το χρόνο. Παρότι τα παραπροιόντα αυτά είναι σε μικρές συγκεντρώσεις, μέσα στα 109 batches που γίνονται το χρόνο και στο working volume των 1301.5 m^3 που χρησιμοποιούμε, οι συνολικές ποσότητες είναι σημαντικές. Άρα, αξίζει να μελετηθεί τι θα γίνουν τα παραπροιόντα αυτά.
 
 Η γλυκερόλη έχει τιμή 721.07 ευρώ ανά τόνο, η ουρία 638.13 ευρώ ανά τόνο ενώ το corn steep liquor 360 ευρώ ανά τόνο. https://www.echemi.com/productsInformation/pid_Seven41077-glycerol.html
 https://www.indiamart.com/proddetail/corn-steep-liquor-15744963191.html
 https://tradingeconomics.com/commodity/urea
 
-Ανάγοντας τα στα παραπάνω μεγέθη, το κόστος των πρώτων υλών είναι 415.38 χιλιάδες ευρώ για την ουρία και 468.67 χιλιάδες για το CSL (συνολικό κόστος 884.05 χιλιάδες ευρώ) ενώ το κέρδος είναι 22.57 εκατομμύρια. Άρα, το οικονομικό δυναμικό της διεργασίας είναι 21.68 εκατομμύρια.
+Ανάγοντας τα στα παραπάνω μεγέθη, το κόστος των πρώτων υλών είναι 181.06 χιλιάδες ευρώ για την ουρία και 204.29 χιλιάδες για το CSL (συνολικό κόστος 385.35 χιλιάδες ευρώ) ενώ το κέρδος είναι 9.84 εκατομμύρια. Άρα, το οικονομικό δυναμικό της διεργασίας είναι 9.45 εκατομμύρια.
 
 Βέβαια, ο όγκος του αντιδραστήρα που χρησιμοποιήθηκε είναι επικίνδυνα μεγάλος άρα πρέπει να δούμε αν θα δημιουργήσει αυτό προβλήματα.
 
@@ -563,6 +567,41 @@ An example is mentioned in this section.
 #+ATTR_ORG: :width 1600px
 [[file:Διάγραμμα_Ροής/2022-11-12_18-51-45_screenshot.png]]
 
+* Ισοζύγια Μάζας
+* Ισοζύγια μάζας στην τροφοδοσία
+Η αρχική τροφοδοσία είναι 200.000 tn πυρηνόξυλο. Η σύσταση αυτού σε κυτταρίνη, ημικυτταρίνη, λιγνίνη και άλλα συστατικά θα προκύψει ως μέσος όρος των αποτελεσμάτων των [[cite:&koutsomitopoulouPreparationCharacterizationOlive2014;&fernandez-bolanosCharacterizationLigninObtained1999;&gonzalezCombustionOptimisationBiomass2004a]]
+
+Με βάση αυτά, το 37% είναι κυτταρίνη, το 26.5% ημικυτταρίνη, 23.75% λιγνίνη, 8.93% υγρασία, 2.3% τέφρα. Αυτά αθροίζονται στο 98.35% της συνολικής βιομάζας. Τα trace elements (N, Cl, Fe, Al και άλλα μέταλλα) συνυπολογίζονται στο 0.92% της βιομάζας άρα στο σύνολο έχουμε το 99.3% της βιομάζας. Το υπόλοιπο είναι λόγω σφαλμάτων στρογγυλοποίησης καθώς χρησιμοποιήθηκαν δεδομένα από 3 διαφορετικές πηγές. Μπορούν να αποδοθούν σε κάποιο απο τα βασικά συστατικά του ρεύματος. Για να βγαίνουν σχεδόν 100%, μπορούμε να στρογγυλοποίησουμε την υγρασία στο 9% και να πούμε ότι η λιγνίνη είναι 24.2%, το οποίο δίνει σύνολο 99.9%. Αν θέλουμε να υπολογιστεί το 100%, μπορούμε να πούμε και ότι τα trace elements είναι 1% αντί για 0.92% (υποθέτοντας ότι το υπόλοιπο 0.08% δεν έχει εντοπιστεί).
+
+* Προκατεργασία βιομάζας με steam explosion - Yields των συστατικών
+Έπειτα, μελετάμε το yield της εκρήξης ατμού με βάση τα δεδομένα των [[cite:&fernandez-bolanosSteamexplosionOliveStones2001]] . Βλέπουμε πως πιό αποδοτική είναι η διεργασία για Τ = 232 C και χρόνο παραμονής 2 λεπτά, με Ro = 4.22. Σε αυτήν, η υδατοδιαλυτή φάση είναι το 25.5% του συνολικού ενώ στην στερεή φάση ανακτάται το 52.9% της βιομάζας εκ του οποίου το 37.7% είναι στο κλάσμα της κυτταρίνης και το 15.2% της λιγνίνης.
+
+Στην υγρή φάση είναι η ημικυτταρίνη και φαινόλες. Αφαιρόντας την σύσταση των φαινολών (2.5%) βρίσκουμε πως ανακτήθηκε το 93.8% της συνολικής ημικυτταρίνης. Το υπόλοιπο ή διασπάστηκε θερμικά κατά την διεργασία ή δεν διαλύθηκε. Ακόμη, από την σύσταση της φάσης αυτής, ξέρουμε ότι το 51.4% είναι ζάχαρες, δηλαδή έχουμε ως προιόν 26214 tn ημικυτταρινικές ζάχαρες. Οι φαινόλες θεωρούμε πως ανακτόνται πλήρως μέσω εκχύλισης, ενώ τα υπόλοιπα πηγαίνουν στον αντιδραστήρα παραγωγής φουρφουράλης όπου δραστική είναι μόνο η ξυλόζη ενώ τα υπόλοιπα συστατικά θα υποθέσουμε ότι είναι αδρανή. Η ξυλόζη είναι το 45.7% της υδατοδιαλυτής φάσης, άρα η τροφοδοσία της θα είναι 23307 tn/y.
+
+Από τη στερεή φάση, βλέπουμε πόση λιγνίνη ανακτάται το οποίο είναι το 62.8% της συνολικής. Στην κυτταρινική φάση υπάρχει περίσεμα ποσότητας καθώς βγαίνει μεγαλύτερη από την κυτταρίνη που υπάρχει στο δείγμα. Τα υπόλοιπα είναι λιγνίνη που δεν αφαιρέθηκε και αδιάλυτη ημικυτταρίνη.
+
+Για να δούμε πόση κυτταρίνη έχει πραγματικά το κλάσμα αυτό, πρέπει να σκεφτούμε τι διασπάστηκε. Για αυτό, δεν υπάρχουν λεπτομερή δεδομένα και απαιτείται να γίνουν κάποιες παραδοχές, αλλά ξέρουμε πως η ημικυτταρίνη είναι η πιό επιρρεπής στην θερμική διάσπαση και άρα μπορούμε να υποθέσουμε πως ότι δεν διαλύθηκε διασπάστηκε θερμικά ενώ η λιγνίνη είναι η πιό θερμοάντοχη. Άρα, πέρα από την ημικυτταρίνη, ένα σημαντικό ποσοστό της θερμικά αποδομημένης βιομάζας θα είναι κυτταρίνη. Επίσης, πέρα από τις φαινόλες της λιγνίνης, μπορούμε να υποθέσουμε πως δεν διαλύθηκε άλλη ποσότητα κυτταρίνης ή λιγνίνης στο νερό άρα ότι απώλεια έχουμε είναι θερμική. Η απώλεια λιγνίνης είναι 37.2%. Θα υποθέσουμε ότι μόνο ένα 10% αυτού είναι θερμική διάσπαση καθώς η θερμοκρασία είναι σχετικά χαμηλή για την λιγνίνη. Άρα διασπάστηκε ένα 3.72% της συνολικής λιγνίνης.
+
+Υπό αυτές τις παραδοχές, βρίσκουμε ότι το κυτταρινικό κλάσμα έχει 60486 tn κυτταρίνη και 14914 tn λιγνίνη. Άρα, ανακτάται το 81.74% της συνολικής κυτταρίνης, και το κλάσμα αυτό είναι κατά 19.78% λιγνίνη. Έπειτα, το κλάσμα αυτό ακολουθεί κατεργασία με ClO_2 το οποίο σε όξινες συνθήκες οξειδώνει την λιγνίνη και δημιουργεί ίζημα το οποίο διαχωρίζεται με διήθηση. Το ρεύμα της καθαρής πλέον κυτταρίνης (60486 tn/y) υδρολύεται 
+
+Έπειτα, η κυτταρίνη αυτή υδρολύεται παράγοντας γλυκόζη με την μέγιστη δυνατή απόδοση (εφόσον έχει απολιγνοποιηθεί). Αυτό είναι 30.9% της μάζας του ξηρού υποστρώματος της έκρηξης ατμού, δηλαδή των 105800 tn/y. Άρα, παράγονται 32692.2 tn/y γλυκόζη. Αυτή είναι η γλυκόζη που μπαίνει στον βιοαντιδραστήρα ως υπόστρωμα.
+
+* Ισοζύγιο μάζας βιοαντιδραστήρα
+Για τον βιοαντιδραστήρα, τα ισοζύγια που αφορούν τι ποσότητες μπαίνουν και τι βγαίνουν έχουν γίνει με βάση βιβλιογραφικά δεδομένα κινητικών πειραμάτων. Ένας υπολογισμός ο οποίος όμως δεν έχει γίνει και είμαστε σε θέση να κάνουμε είναι η ποσότητα λιγνίνης που απαιτείται για την απομάκρυνση των αζωτούχων ουσιών. Επίσης, πρέπει να γίνουν οι υπολογισμοί των αποστακτικών στηλών για να δούμε πόση καθαρή γλυκερόλη ανακτάται, αλλά αυτό θα απαιτήσει υπολογισμούς στο Aspen.
+
+Σύμφωνα με τους [[cite:&wallersteinMethodRecoveringGlycerol1946]], η λιγνίνη που απαιτείται είναι κατά μάζα ίση με τα αζωτούχα συστατικά στον αντιδραστήρα. Μην έχοντας κινητικά δεδομένα για την κατανάλωση της ουρίας και του CSL στον αντιδραστήρα, ή την στοιχειομετρία της αντίδρασης που συμβαίνει σε αυτόν, είναι δύσκολο να προβλέψουμε την ποσότητα αζώτου στην έξοδο. Μπορεί να υπολογιστεί αυτή στην είσοδο και να υποθέσουμε μία μετατροπή που θα έχει στον αντιδραστήρα.
+
+Η ουρία έχει χημικό τύπο \( CO(NH_2)_2 \). Με βάση το μοριακό βάρος της και το ατομικό βάρος του αζώτου, βρίσκουμε ότι το 46.667% της ουρίας είναι άζωτο κατά μάζα. Για την κατανάλωση της, ξέρουμε από τους [[cite:&zhugeGlycerolProductionNovel2001]] ότι αν βάλουμε στον αντιδραστήρα 1g/l ουρία, στο τέλος της αντίδρασης θα περίσσεψει πολύ περισσότερη γλυκόζη από ότι αν βάλουμε 2g/l. Αυτό σημαίνει ότι στο 1g/l η ουρία θα ήταν το περιοριστικό υπόστρωμα. Επίσης όμως, αν αυξήσουμε την ποσότητα πάνω από 2 g/l, η απόκριση της αντίδρασης είναι αμελητέα. Άρα στο 2 g/l δεν είναι περιοριστικό υπόστρωμα η ουρία. Απουσία άλλων δεδομένων, θα υποθέσουμε ότι η κατανάλωση είναι μεταξύ του 1 και του 2, άρα έστω περίπου 1.5 g/l. Δηλαδή στο τέλος της αντίδρασης υπάρχουν 0.5 g/l ουρία άρα 0.233 g/l άζωτο.
+
+Για το CSL, σύμφωνα με τους [[cite:&zhugeGlycerolProductionNovel2001]], η παρουσία του παίζει καθοριστικό ρόλο στην ανάπτυξη του μικροοργανισμού, καθώς προσφέρει πολλά θρεπτικά συστατικά. Βέβαια, δεν αποτελεί περιοριστικό υπόστρωμα και η προσθήκη μεγαλύτερης ποσότητας αυξάνει τον ρυθμό λόγω παρουσίας περισσότερων απαραίτητων θρεπτικών συστατικών. Απουσία άλλων πληροφοριών, θα υποτεθεί ότι καταναλώνεται το 50% στην αντίδραση για να γίνουν οι παρακάτω υπολογισμοί. To CSL που έχουμε χρησιμοποιήσει για την κοστολόγηση ([[https://www.indiamart.com/proddetail/corn-steep-liquor-15744963191.html][Indiamart]]) έχει 3.94% άζωτο. Άρα, θα υπάρχουν 0.0788 g/l άζωτο από το CSL.
+
+Στο σύνολο, στην έξοδο του αντιδραστήρα με βάση αυτές τις παραδοχές θα υπάρχει περίπου 0.3121 g/l άζωτο.
+
+Με βάση τους υπολογισμούς της κινητικής που έχουν γίνει, ο όγκος του αντιδραστήρα θα είναι 1301.5 m^3, άρα το συνολικό άζωτο που θα υπάρχει στην έξοδο του αντιδραστήρα άνα batch θα είναι 406.21 kg άζωτο. Κάθε χρόνο γίνονται 109 batches με βάση τον χρόνο παραμονής που έχει επιλεχθεί, άρα ετησίως ο αντιδραστήρας έχει στην έξοδο του 44.28 tn άζωτο. Στην πράξη, μπορεί να υπάρχει και ένα μέρος του αρχικού αζώτου το οποίο υπήρχε στο πυρηνόξυλο στον αντιδραστήρα. Θα υποθέσουμε απουσία άλλων δεδομένων πως το άζωτο στο κυτταρινικό κλάσμα είναι το 0.4% της συνολικής τροφοδοσίας. Πιθανόν να έχει μείνει και λιγότερο από αυτό, αλλά σύμφωνα με τους [[cite:&wallersteinMethodRecoveringGlycerol1946]], μία μικρή περίσσεια λιγνίνης δεν δημιουργέι πρόβλημα.
+
+Άρα, πρέπει να πάρουμε 286.22 tn λιγνίνη (ή και λίγο παραπάνω) από το ρεύμα της για τον διαχωρισμό του αζώτου στην έξοδο του βιοαντιδραστήρα.
+
+Η υπόλοιπη (30113 tn περίπου) καίγεται για παραγωγή 707.65 TJ/y ενέργειας
 
 * Βιβλιογραφία
 bibliography:~/Sync/My_Library.bib
