Commiting my files for the 2nd exam
pretreatment_bioreactor_2nd_exam.org is the source file and
pretreatment_bioreactor_2nd_exam.pdf is the pdf from latex-export for
my part of the 2nd exam files. Also minor changes to the flowsheet

--- a/process_design_project_notes.org
+++ b/process_design_project_notes.org
@@ -568,12 +568,12 @@ An example is mentioned in this section.
 [[file:Διάγραμμα_Ροής/2022-11-12_18-51-45_screenshot.png]]
 
 * Ισοζύγια Μάζας
-* Ισοζύγια μάζας στην τροφοδοσία
+** Ισοζύγια μάζας στην τροφοδοσία
 Η αρχική τροφοδοσία είναι 200.000 tn πυρηνόξυλο. Η σύσταση αυτού σε κυτταρίνη, ημικυτταρίνη, λιγνίνη και άλλα συστατικά θα προκύψει ως μέσος όρος των αποτελεσμάτων των [[cite:&koutsomitopoulouPreparationCharacterizationOlive2014;&fernandez-bolanosCharacterizationLigninObtained1999;&gonzalezCombustionOptimisationBiomass2004a]]
 
 Με βάση αυτά, το 37% είναι κυτταρίνη, το 26.5% ημικυτταρίνη, 23.75% λιγνίνη, 8.93% υγρασία, 2.3% τέφρα. Αυτά αθροίζονται στο 98.35% της συνολικής βιομάζας. Τα trace elements (N, Cl, Fe, Al και άλλα μέταλλα) συνυπολογίζονται στο 0.92% της βιομάζας άρα στο σύνολο έχουμε το 99.3% της βιομάζας. Το υπόλοιπο είναι λόγω σφαλμάτων στρογγυλοποίησης καθώς χρησιμοποιήθηκαν δεδομένα από 3 διαφορετικές πηγές. Μπορούν να αποδοθούν σε κάποιο απο τα βασικά συστατικά του ρεύματος. Για να βγαίνουν σχεδόν 100%, μπορούμε να στρογγυλοποίησουμε την υγρασία στο 9% και να πούμε ότι η λιγνίνη είναι 24.2%, το οποίο δίνει σύνολο 99.9%. Αν θέλουμε να υπολογιστεί το 100%, μπορούμε να πούμε και ότι τα trace elements είναι 1% αντί για 0.92% (υποθέτοντας ότι το υπόλοιπο 0.08% δεν έχει εντοπιστεί).
 
-* Προκατεργασία βιομάζας με steam explosion - Yields των συστατικών
+** Προκατεργασία βιομάζας με steam explosion - Yields των συστατικών
 Έπειτα, μελετάμε το yield της εκρήξης ατμού με βάση τα δεδομένα των [[cite:&fernandez-bolanosSteamexplosionOliveStones2001]] . Βλέπουμε πως πιό αποδοτική είναι η διεργασία για Τ = 232 C και χρόνο παραμονής 2 λεπτά, με Ro = 4.22. Σε αυτήν, η υδατοδιαλυτή φάση είναι το 25.5% του συνολικού ενώ στην στερεή φάση ανακτάται το 52.9% της βιομάζας εκ του οποίου το 37.7% είναι στο κλάσμα της κυτταρίνης και το 15.2% της λιγνίνης.
 
 Στην υγρή φάση είναι η ημικυτταρίνη και φαινόλες. Αφαιρόντας την σύσταση των φαινολών (2.5%) βρίσκουμε πως ανακτήθηκε το 93.8% της συνολικής ημικυτταρίνης. Το υπόλοιπο ή διασπάστηκε θερμικά κατά την διεργασία ή δεν διαλύθηκε. Ακόμη, από την σύσταση της φάσης αυτής, ξέρουμε ότι το 51.4% είναι ζάχαρες, δηλαδή έχουμε ως προιόν 26214 tn ημικυτταρινικές ζάχαρες. Οι φαινόλες θεωρούμε πως ανακτόνται πλήρως μέσω εκχύλισης, ενώ τα υπόλοιπα πηγαίνουν στον αντιδραστήρα παραγωγής φουρφουράλης όπου δραστική είναι μόνο η ξυλόζη ενώ τα υπόλοιπα συστατικά θα υποθέσουμε ότι είναι αδρανή. Η ξυλόζη είναι το 45.7% της υδατοδιαλυτής φάσης, άρα η τροφοδοσία της θα είναι 23307 tn/y.
@@ -586,7 +586,7 @@ An example is mentioned in this section.
 
 Έπειτα, η κυτταρίνη αυτή υδρολύεται παράγοντας γλυκόζη με την μέγιστη δυνατή απόδοση (εφόσον έχει απολιγνοποιηθεί). Αυτό είναι 30.9% της μάζας του ξηρού υποστρώματος της έκρηξης ατμού, δηλαδή των 105800 tn/y. Άρα, παράγονται 32692.2 tn/y γλυκόζη. Αυτή είναι η γλυκόζη που μπαίνει στον βιοαντιδραστήρα ως υπόστρωμα.
 
-* Ισοζύγιο μάζας βιοαντιδραστήρα
+** Ισοζύγιο μάζας βιοαντιδραστήρα
 Για τον βιοαντιδραστήρα, τα ισοζύγια που αφορούν τι ποσότητες μπαίνουν και τι βγαίνουν έχουν γίνει με βάση βιβλιογραφικά δεδομένα κινητικών πειραμάτων. Ένας υπολογισμός ο οποίος όμως δεν έχει γίνει και είμαστε σε θέση να κάνουμε είναι η ποσότητα λιγνίνης που απαιτείται για την απομάκρυνση των αζωτούχων ουσιών. Επίσης, πρέπει να γίνουν οι υπολογισμοί των αποστακτικών στηλών για να δούμε πόση καθαρή γλυκερόλη ανακτάται, αλλά αυτό θα απαιτήσει υπολογισμούς στο Aspen.
 
 Σύμφωνα με τους [[cite:&wallersteinMethodRecoveringGlycerol1946]], η λιγνίνη που απαιτείται είναι κατά μάζα ίση με τα αζωτούχα συστατικά στον αντιδραστήρα. Μην έχοντας κινητικά δεδομένα για την κατανάλωση της ουρίας και του CSL στον αντιδραστήρα, ή την στοιχειομετρία της αντίδρασης που συμβαίνει σε αυτόν, είναι δύσκολο να προβλέψουμε την ποσότητα αζώτου στην έξοδο. Μπορεί να υπολογιστεί αυτή στην είσοδο και να υποθέσουμε μία μετατροπή που θα έχει στον αντιδραστήρα.
@@ -597,7 +597,7 @@ An example is mentioned in this section.
 
 Στο σύνολο, στην έξοδο του αντιδραστήρα με βάση αυτές τις παραδοχές θα υπάρχει περίπου 0.3121 g/l άζωτο.
 
-Με βάση τους υπολογισμούς της κινητικής που έχουν γίνει, ο όγκος του αντιδραστήρα θα είναι 1301.5 m^3, άρα το συνολικό άζωτο που θα υπάρχει στην έξοδο του αντιδραστήρα άνα batch θα είναι 406.21 kg άζωτο. Κάθε χρόνο γίνονται 109 batches με βάση τον χρόνο παραμονής που έχει επιλεχθεί, άρα ετησίως ο αντιδραστήρας έχει στην έξοδο του 44.28 tn άζωτο. Στην πράξη, μπορεί να υπάρχει και ένα μέρος του αρχικού αζώτου το οποίο υπήρχε στο πυρηνόξυλο στον αντιδραστήρα. Θα υποθέσουμε απουσία άλλων δεδομένων πως το άζωτο στο κυτταρινικό κλάσμα είναι το 0.4% της συνολικής τροφοδοσίας. Πιθανόν να έχει μείνει και λιγότερο από αυτό, αλλά σύμφωνα με τους [[cite:&wallersteinMethodRecoveringGlycerol1946]], μία μικρή περίσσεια λιγνίνης δεν δημιουργέι πρόβλημα.
+Με βάση τους υπολογισμούς της κινητικής που έχουν γίνει, ο όγκος του αντιδραστήρα θα είναι 1301.5 m^3, άρα το συνολικό άζωτο που θα υπάρχει στην έξοδο του αντιδραστήρα άνα batch θα είναι 406.21 kg άζωτο. Κάθε χρόνο γίνονται 109 batches με βάση τον χρόνο παραμονής που έχει επιλεχθεί, άρα ετησίως ο αντιδραστήρας έχει στην έξοδο του 44.28 tn άζωτο. Στην πράξη, όμως μπορεί να υπάρχει και ένα μέρος του αρχικού αζώτου το οποίο υπήρχε στο πυρηνόξυλο στον αντιδραστήρα. Θα υποθέσουμε απουσία άλλων δεδομένων πως το άζωτο στο κυτταρινικό κλάσμα είναι το 0.4% της συνολικής τροφοδοσίας, καθώς αυτή είναι η ποσότητα αζώτου που υπάρχει στο πυρηνόξυλο. Πιθανόν να έχει μείνει και λιγότερο από αυτό, αλλά σύμφωνα με τους [[cite:&wallersteinMethodRecoveringGlycerol1946]], μία μικρή περίσσεια λιγνίνης δεν δημιουργέι πρόβλημα.
 
 Άρα, πρέπει να πάρουμε 286.22 tn λιγνίνη (ή και λίγο παραπάνω) από το ρεύμα της για τον διαχωρισμό του αζώτου στην έξοδο του βιοαντιδραστήρα.
 
