Adding bioreactor stoichiometry calculations

--- a/glycerol_economic_potential.org
+++ b/glycerol_economic_potential.org
@@ -6,12 +6,12 @@
 
 Αξίζει να σημειωθεί πως 4 g CSL αντιστοιχούν σε 35.71 mg P, ενώ σύμφωνα με τις βέλτιστες συνθήκες που προσδιόρισαν οι [[cite:&zhugeGlycerolProductionNovel2001]] θέλουμε 55-65 mg P/l. Η πειραματική διαδικασία προέκυψε από την μελέτη [[cite:&jinByproductFormationNovel2003]] και όχι την μελέτη των βέλτιστων συνθηκών επειδή στο άρθρο αυτό αναφερόταν και η συγκέντρωση της βιομάζας η οποία είναι απαραίτητη για μία σωστή κινητική μελέτη.
 
-Για αντιδραστήρα 2985.9 m^3, θέλουμε 75000 τόνους γλυκόζη, 650.93 τόνους ουρία και 1301.9 τόνους Corn steep liquor. Η παραγωγικότητα είναι 31298 τόνοι γλυκερόλη. Τα παραπροιόντα είναι 1469.8 τόνοι αραβιτόλη, 387.30 τόνοι αιθανόλη και 380.79 τόνοι οξικό οξύ το χρόνο. Παρότι τα παραπροιόντα αυτά είναι σε μικρές συγκεντρώσεις, μέσα στα 109 batches που γίνονται το χρόνο και στο working volume των 2985.9 m^3 που χρησιμοποιούμε, οι συνολικές ποσότητες είναι σημαντικές. Άρα, αξίζει να μελετηθεί τι θα γίνουν τα παραπροιόντα αυτά.
+Για αντιδραστήρα 1301.5 m^3, ο οποίος απαιτείται για την επεξεργασία 32692.2 τόνους γλυκόζη, θέλουμε 283.74 τόνους ουρία και 567.47 τόνους Corn steep liquor. Η παραγωγικότητα είναι 13643 τόνοι γλυκερόλη. Τα παραπροιόντα είναι 640.68 τόνοι αραβιτόλη, 168.82 τόνοι αιθανόλη και 165.99 τόνοι οξικό οξύ το χρόνο. Παρότι τα παραπροιόντα αυτά είναι σε μικρές συγκεντρώσεις, μέσα στα 109 batches που γίνονται το χρόνο και στο working volume των 1301.5 m^3 που χρησιμοποιούμε, οι συνολικές ποσότητες είναι σημαντικές. Άρα, αξίζει να μελετηθεί τι θα γίνουν τα παραπροιόντα αυτά.
 
 Η γλυκερόλη έχει τιμή 721.07 ευρώ ανά τόνο, η ουρία 638.13 ευρώ ανά τόνο ενώ το corn steep liquor 360 ευρώ ανά τόνο. https://www.echemi.com/productsInformation/pid_Seven41077-glycerol.html
 https://www.indiamart.com/proddetail/corn-steep-liquor-15744963191.html
 https://tradingeconomics.com/commodity/urea
 
-Ανάγοντας τα στα παραπάνω μεγέθη, το κόστος των πρώτων υλών είναι 415.38 χιλιάδες ευρώ για την ουρία και 468.67 χιλιάδες για το CSL (συνολικό κόστος 884.05 χιλιάδες ευρώ) ενώ το κέρδος είναι 22.57 εκατομμύρια. Άρα, το οικονομικό δυναμικό της διεργασίας είναι 21.68 εκατομμύρια.
+Ανάγοντας τα στα παραπάνω μεγέθη, το κόστος των πρώτων υλών είναι 181.06 χιλιάδες ευρώ για την ουρία και 204.29 χιλιάδες για το CSL (συνολικό κόστος 385.35 χιλιάδες ευρώ) ενώ το κέρδος είναι 9.84 εκατομμύρια. Άρα, το οικονομικό δυναμικό της διεργασίας είναι 9.45 εκατομμύρια.
 
 Βέβαια, ο όγκος του αντιδραστήρα που χρησιμοποιήθηκε είναι επικίνδυνα μεγάλος άρα πρέπει να δούμε αν θα δημιουργήσει αυτό προβλήματα.
