Adding the simplified bioreactor simulation and other minor things.
The bioreactor for glycerol production was modeled in Aspen in the
simplest form possible (documentation for the process is in the
corresponding .org file). Other changes include minor calculation
changes in some excel files and some additions to the bioreactor
stoichiometry which mention what the simplest form of the bioreaction
that was simulated is.

--- a/README.org
+++ b/README.org
@@ -8,4 +8,4 @@ In the /Diagrams folder are various .svg files created with Inkscape which are r
 
 In the /Calculations folder are various Excel and Matlab files used for calculations needed for the project.
 
-In the /Aspen folder are aspen files we have used for simulations of the process.
+In the /Aspen folder are aspen files we have used for simulations of the process. Following the .apwz files (aspen files) are in some cases .org documents documenting the process.
