--- a/bioreactor_stoichiometry.org
+++ b/bioreactor_stoichiometry.org
@@ -38,3 +38,5 @@
 Εφόσον στην αντίδραση αυτή δεν έχουν συμπεριληφθεί O_2 στα αντιδρώντα και βιομάζα, H_2O και CO_2 στα προιόντα, δεν θα κλείνουν τα στοιχειακά ισοζύγια για την αντίδραση. Απουσία άλλων δεδομένων, οι συντελεστές Ο_2, CO_2, H_2O και βιομάζας θα ληφθούν όλοι ίσοι με την μονάδα και ο τύπος της βιομάζας θα προκύψει έτσι ώστε να κλείνει το ισοζύγιο. Αν συμπεριληφθούν O_2 στα αντιδρώντα και CO_2, H_2O στα προιόντα όλα με συντελεστή μονάδα, τότε προκύπτει πως η βιομάζα θα έχει τύπο \( C_{3.167}H_{4.333}O_{3.217}N_{0.05} \). Άρα, η συνολική μικροβιακή αντίδραση που διεξάγεται θα είναι η
 \[ 1.22S + 0.24U + 0.049C + O_2 \rightarrow C_{3.167}H_{4.333}O_{3.217}N_{0.05} + G + 0.028Ar +0.025E + 0.019Ac + H_2O +CO_2 \]
 
+Σε πρώτη φάση, μπορεί η προσωμοίωση να γίνει στην απλουστευμένη περίπτωση ότι γλυκόζη και οξυγόνο, δίνουν γλυκερόλη, διοξείδιο του άνθρακα και νερό, κυρίως για να εξοικειωθώ με τους batch αντιδραστήρες στο ασπεν και να δοκιμάσω κάτι. Σε επόμενη φάση θα αναλυθεί η παραπάνω συνολική αντίδραση και οι διαχωρισμοί που απαιτεί. Για την στοιχειομετρία της αντίδρασης \( C_6H_{12}O_6 + O_2 \rightarrow C_3H_8O_3 + CO_2 +H_2O \) έχουμε 2 βαθμούς ελευθερίας ενώ οι υπόλοιποι συντελεστές καθορίζονται από τα mass balances C, H, O. Αν υποθέσουμε ότι οι συντελεστές γλυκερόλης και γλυκόζης είναι ίδιοι με αυτούς της συνολικής αντίδρασης τότε έχουμε ένα πλήρως ορισμένο σύστημα. Και καθώς αυτά τα δύο προκύπτουν από τα ίδια πειραματικά δεδομένα με την κινητική, είναι μία έγκυρη πηγή. Άρα, σε πρώτη φάση θα εξεταστεί η αντίδραση
+\( 1.22 C_6H_{12}O_6 + 3.82O_2 \rightarrow C_3H_8O_3 + 4.32CO_2 + 3.32H_2O \) .
