--- a/c_glycerinogenes_rate_expressions.org
+++ b/c_glycerinogenes_rate_expressions.org
@@ -8,10 +8,10 @@
 
 Για τον ρυθμό ανάπτυξης βιομάζας ισχύει \( x = -0.013t^2 + 0.884t - 1.877 \) με R^2 = 0.999 του οποίου η παράγωγος είναι \( \frac{dx}{dt} = -0.026t+0.884 \)
 
-Με τον πιο ακριβή τρόπο προσδιορισμού του ρυθμού, προκύπτει ένα μοντέλο Monod για την ανάπτυξη της βιομάζας του τύπου \[ \frac{dx}{dt} = \frac{0.011[S]}{236.19+[S]}[x] \] η οποία έχει R^2 = 0.989 με 4 πειραματικά σημεία και έναν πιο ακριβή προσδιορισμό του ρυθμού. Αν θέλω τον ρυθμό κατανάλωσης του υποστρώματος τότε αρκεί να υπολογίσω το \( Y_{X / S} \) και να το βάλω στον παρανομαστή του μοντέλου. Το \( Y_{X / S} = \frac{ΔX}{ΔS} \) για το εύρος των μετρήσεων που έχουν εισαχθεί στο μοντέλο Monod είναι -0.1675. Άρα \[ \frac{dS}{dt} = - \frac{0.0657[S]}{236.19 + [S]}[x] \] 
+Με τον πιο ακριβή τρόπο προσδιορισμού του ρυθμού, προκύπτει ένα μοντέλο Monod για την ανάπτυξη της βιομάζας του τύπου \[ \frac{dx}{dt} = \frac{0.011[S]}{236.19+[S]}[x] \] η οποία έχει R^2 = 0.989 με 4 πειραματικά σημεία και έναν πιο ακριβή προσδιορισμό του ρυθμού. Αν θέλω τον ρυθμό κατανάλωσης του υποστρώματος τότε αρκεί να υπολογίσω το \( Y = \frac{1}{Y_{X / S}} + \frac{a_i}{Y_{G / S}} \) και να το βάλω στον παρανομαστή του μοντέλου. Μετά από υπολογισμούς των παραμέτρων αυτών προκύπτει πως Y = -7.037. Άρα \[ \frac{dS}{dt} = - \frac{1.563*10^{-3}[S]}{236.19 + [S]}[x] \] 
 
 Αν θέλουμε να δούμε την κινητική παραγωγής της γλυκερόλης, αυτή θα είναι \[ r_G = \frac{dG}{dt} = k C_S^n \]. Εφόσον βρήκαμε το r_G και το C_S δίνεται από τα πειραματικά δεδομένα, μπορούμε να κάνουμε fit στην γραμμική σχέση \[ \ln r_G = \ln k + n \ln C_S\] για να βρούμε την τεχνική κινητική παραγωγής του επιθυμητού προιόντος. Προκύπτει πως η τάξη της αντίδρασης είναι 0.335 ως προς το υπόστρωμα και η ειδική ταχύτητα είναι 0.257. Άρα \( r_G = 0.257 [S]^{0.335} \).
 
-Με βάση τα δεδομένα αυτά, μπορούμε να κάνουμε μία εκτίμηση του όγκου του αντιδραστήρα που απαιτείται και της ετήσιας παραγωγής γλυκερόλης. Εφόσον είναι γνωστός ο χρόνος παραμονής και η συγκέντρωση γλυκόζης που εισέρχεται στον αντιδραστήρα μπορεί να υπολογιστεί η κατανάλωση της γλυκόζης ανηγμένη ως προς τον όγκο του αντιδραστήρα [\( \frac{g}{l \cdot year} \)]. Εφόσον είναι γνωστό και το ρεύμα τροφοδοσίας μπορεί να υπολογιστεί πόση μάζα γλυκόζης πρέπει να διαχειριστούμε τον χρόνο. Ο λόγος αυτών των δύο, μας δίνει το απαραίτητο working volume ώστε να επεξεργαστούμε όλη την βιομάζα που έχει η τροφοδοσία χρησιμοποιώντας σε κάθε batch την βέλτιστη συγκέντρωση υποστρώματος. Αυτός προκύπτει ίσος με 2985.9 m^3. Ο συνολικός αντιδρών όγκος άρα πρέπει να είναι στο ελάχιστο 2985.9 m^3, διαμερισμένο μάλλον σε αρκετούς αντιδραστήρες.
+Με βάση τα δεδομένα αυτά, μπορούμε να κάνουμε μία εκτίμηση του όγκου του αντιδραστήρα που απαιτείται και της ετήσιας παραγωγής γλυκερόλης. Εφόσον είναι γνωστός ο χρόνος παραμονής και η συγκέντρωση γλυκόζης που εισέρχεται στον αντιδραστήρα μπορεί να υπολογιστεί η κατανάλωση της γλυκόζης ανηγμένη ως προς τον όγκο του αντιδραστήρα [\( \frac{g}{l \cdot year} \)]. Εφόσον είναι γνωστό και το ρεύμα τροφοδοσίας μπορεί να υπολογιστεί πόση μάζα γλυκόζης πρέπει να διαχειριστούμε τον χρόνο. Ο λόγος αυτών των δύο, μας δίνει το απαραίτητο working volume ώστε να επεξεργαστούμε όλη την βιομάζα που έχει η τροφοδοσία χρησιμοποιώντας σε κάθε batch την βέλτιστη συγκέντρωση υποστρώματος. Αυτός προκύπτει ίσος με 1301.5 m^3. Ο συνολικός αντιδρών όγκος άρα πρέπει να είναι στο ελάχιστο 1301.5 m^3.
 
 Σε ξεχωριστό αρχείο παρουσιάζονται και τα οικονομικά στοιχεία της διεργασίας
